fixed margin spacing for product detail page, display none for recommended part

--- a/css/grids.css
+++ b/css/grids.css
@@ -29,12 +29,9 @@ body {
 	}
 
 
-
 .dropdown-nav:hover .dropdown-content {
 		display: none;
 	}
-
-
 
 
 .landing-banner{
@@ -62,12 +59,6 @@ body {
 	width: 25%;
 }
 
-.recommended-container .grid-col-2of12{
-		width: 50%;
-	}
-
-
-
 
 #global-footer {
 	padding: 1em;
@@ -77,6 +68,12 @@ body {
 .cart-card .grid-col-1of4{
 		width: 25%;
 	}
+
+@media (max-width: 40em) {
+    .recommended-container .grid-col-2of12{
+        display: none !important;
+    }
+}
 
 
 @media (min-width: 30em){
@@ -247,8 +244,6 @@ body {
 		width: 25%;
 	}
 
-
-
 	.grid-col-2of3 {
 		width: 66.6666667%;
 	}
@@ -293,7 +288,6 @@ body {
 	.grid-col-3of4 {
 		width: 75%;
 	}
-
 
 	.center-container {
 		padding: 0 5em;
